--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/docs/assets/css/styles.c692dc98.css">
   </head>
   <body>
-    <div id="app"><!--[--><div class="theme-container"><div class="theme-default-content"><h1>404</h1><blockquote>Looks like we&#39;ve got some broken links.</blockquote><a href="/docs/" class="">Take me home</a></div></div><!----><!--]--></div>
+    <div id="app"><!--[--><div class="theme-container"><div class="theme-default-content"><h1>404</h1><blockquote>There&#39;s nothing here.</blockquote><a href="/docs/" class="">Take me home</a></div></div><!----><!--]--></div>
     <script src="/docs/assets/js/runtime~app.7af683a8.js" defer></script><script src="/docs/assets/js/567.74b9d408.js" defer></script><script src="/docs/assets/js/app.6c70e04b.js" defer></script>
   </body>
 </html>
